--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -19,8 +19,10 @@ jobs:
           distribution: 'temurin'
           cache: gradle
 
-      - name: Grant execute permission on Gradle wrapper
-        run: chmod +x gradlew
+      - name: Fix line endings for Gradle wrapper
+        run: |
+          sed -i 's/\r$//' gradlew
+          chmod +x gradlew
 
       - name: Build and test with Gradle wrapper
         run: ./gradlew build
